--- a/src/main/java/controllers/MainView.fxml
+++ b/src/main/java/controllers/MainView.fxml
@@ -4,15 +4,44 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="MainView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.MainController">
+<BorderPane fx:id="MainView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.MainController">
    <center>
-      <SplitPane dividerPositions="0.27848101265822783" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
+      <SplitPane dividerPositions="0.2791970802919708" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
         <items>
-          <AnchorPane minHeight="-Infinity" minWidth="0.0" prefHeight="150.0" prefWidth="588.0" />
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" />
+          <AnchorPane minHeight="-Infinity" minWidth="0.0" prefHeight="150.0" prefWidth="778.0">
+               <children>
+                  <Text layoutX="47.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" text="What the Program can do:" textAlignment="CENTER" wrappingWidth="665.13671875" AnchorPane.leftAnchor="47.0" AnchorPane.rightAnchor="65.86328125">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Text>
+                  <Button fx:id="settingsBtn" layoutX="680.0" layoutY="14.0" mnemonicParsing="false" onAction="#settingsBtn" text="Settings" />
+               </children>
+            </AnchorPane>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="397.0" prefWidth="778.0">
+               <children>
+                  <Pane fx:id="settingsPane" prefHeight="393.0" prefWidth="779.0" visible="false" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <Button fx:id="savePathBtn" layoutX="21.0" layoutY="100.0" mnemonicParsing="false" onAction="#savePathBtn" text="Save Path" />
+                        <Text fill="#393939" layoutX="279.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Settings" textAlignment="CENTER" wrappingWidth="221.916015625">
+                           <font>
+                              <Font size="36.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </Pane>
+                  <TextArea fx:id="text" prefHeight="393.0" prefWidth="778.0" text="- Import books from .txt files&#10;- Change book attributes from table / remove books from system library &#10;- Create libraries &#10;- Add / Remove books to libraries&#10;- Merge Libraries&#10;- On Program Close -- Save system libraries and custom libaries to file (using serialization)&#10;- On Program Open -- Load system libraries and custom libraries from file&#10;- Use Jave Preferences to allow use to specify default save path" wrapText="true">
+                     <font>
+                        <Font size="18.0" />
+                     </font></TextArea>
+               </children></AnchorPane>
         </items>
       </SplitPane>
    </center>
@@ -31,7 +60,7 @@
             <Button fx:id="dictBtn" mnemonicParsing="false" onAction="#goDictionary" text="Dictionaries" />
             <Button fx:id="librariesBtn" mnemonicParsing="false" onAction="#goLibrary" text="Libraries" />
           <Button fx:id="booksBtn" mnemonicParsing="false" onAction="#goBooks" text="Books" />
-            <Button fx:id="homeBtn" mnemonicParsing="false" text="Home" />
+            <Button fx:id="homeBtn" mnemonicParsing="false" onAction="#goHome" text="Home" />
         </buttons>
          <padding>
             <Insets right="10.0" />
