--- a/src/main/java/controllers/MainView.fxml
+++ b/src/main/java/controllers/MainView.fxml
@@ -3,6 +3,9 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="MainView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.MainController">
+<BorderPane fx:id="MainView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../stylesheet.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.MainController">
    <center>
       <SplitPane dividerPositions="0.2791970802919708" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
         <items>
@@ -23,6 +26,17 @@
                      </font>
                   </Text>
                   <Button fx:id="settingsBtn" layoutX="680.0" layoutY="14.0" mnemonicParsing="false" onAction="#settingsBtn" text="Settings" />
+                  <ButtonBar layoutY="14.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="568.0">
+                    <buttons>
+                        <Button fx:id="dictBtn" mnemonicParsing="false" onAction="#goDictionary" prefWidth="126.0" text="Dictionaries" />
+                        <Button fx:id="librariesBtn" mnemonicParsing="false" onAction="#goLibrary" text="Libraries" />
+                      <Button fx:id="booksBtn" mnemonicParsing="false" onAction="#goBooks" text="Books" />
+                        <Button fx:id="homeBtn" mnemonicParsing="false" onAction="#goHome" text="Home" />
+                    </buttons>
+                     <padding>
+                        <Insets right="10.0" />
+                     </padding>
+                  </ButtonBar>
                </children>
             </AnchorPane>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="397.0" prefWidth="778.0">
@@ -55,16 +69,26 @@
     <AnchorPane maxWidth="10.0" prefHeight="300.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </left>
    <top>
-      <ButtonBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-        <buttons>
-            <Button fx:id="dictBtn" mnemonicParsing="false" onAction="#goDictionary" text="Dictionaries" />
-            <Button fx:id="librariesBtn" mnemonicParsing="false" onAction="#goLibrary" text="Libraries" />
-          <Button fx:id="booksBtn" mnemonicParsing="false" onAction="#goBooks" text="Books" />
-            <Button fx:id="homeBtn" mnemonicParsing="false" onAction="#goHome" text="Home" />
-        </buttons>
-         <padding>
-            <Insets right="10.0" />
-         </padding>
-      </ButtonBar>
+      <MenuBar BorderPane.alignment="CENTER">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+              <MenuItem fx:id="saveBtn" mnemonicParsing="false" onAction="#saveBtn" text="Save" />
+                  <MenuItem fx:id="closeBtn" mnemonicParsing="false" onAction="#closeBtn" text="Close" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Edit">
+            <items>
+              <MenuItem fx:id="importBtn" mnemonicParsing="false" onAction="#importBtn" text="Import Books" />
+                  <MenuItem fx:id="viewBtn" mnemonicParsing="false" onAction="#viewBtn" text="View Library" />
+                  <MenuItem fx:id="genBtn" mnemonicParsing="false" onAction="#genBtn" text="Generate Dictionary" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+               <items>
+                  <MenuItem fx:id="aboutBtn" mnemonicParsing="false" onAction="#aboutBtn" text="About" />
+               </items></Menu>
+        </menus>
+      </MenuBar>
    </top>
 </BorderPane>
