--- a/src/main/java/controllers/AboutView.fxml
+++ b/src/main/java/controllers/AboutView.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
@@ -20,11 +21,16 @@
                   <Button fx:id="dictBtn" layoutX="176.0" layoutY="7.0" mnemonicParsing="false" onAction="#goDictionary" text="Dictionaries" />
                   <Button fx:id="librariesBtn" layoutX="85.0" layoutY="7.0" mnemonicParsing="false" onAction="#goLibrary" text="Libraries" />
                   <Button fx:id="booksBtn" layoutX="10.0" layoutY="7.0" mnemonicParsing="false" onAction="#goBooks" text="Books" />
-                  <Text fill="#393939" layoutX="16.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="How to Use:" textAlignment="CENTER" wrappingWidth="221.916015625">
+                  <Text fill="#393939" layoutY="98.0" strokeType="OUTSIDE" strokeWidth="0.0" text="How to Use:" textAlignment="CENTER" wrappingWidth="221.916015625">
                      <font>
                         <Font size="36.0" />
                      </font>
                   </Text>
+                  <TextArea editable="false" layoutX="6.0" layoutY="108.0" prefHeight="436.0" prefWidth="766.0" text="---Help with Books---&#10;&#10;-To import books into the main library, click Edit --&gt; Import Books OR while on the Book Page, click the Import button at the bottom&#10;-To add books to a User Created Library, go to the books page, select in the table which books you desire, cick Add Selected to Library and choose which Library you want in the dropdown menu.&#10;-To delete a book from the main library, go to the Books page, select your desired book(s), click the Delete button and confirm the removal.&#10;&#10;---Help with Libraries---&#10;&#10;-To create a new library, go the Library page and select the button Create New Library.  Give your new library a name.&#10;-To delete a library, go to the Library page, select your desired library, click the Delete button and confirm removal.&#10;-To merge two libraries, go to the Library page, select the Merge button, choose your two libraries to merge and a name for the newly created one.&#10;&#10;---Misc. Help---&#10;&#10;-To change the default path of the system saving your work, select Help --&gt; Settings --&gt; Path and select your desired path and name for the files.&#10;" wrapText="true" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="6.0" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="108.0">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </TextArea>
                </children>
             </AnchorPane>
          </items>
